# ptouch-print

./: CMakeLists.txt
cmake/: gettext.cmake
include/: ptouch.h
po/: de.po  en.po  ptouch.pot
src/: libptouch.c  ptouch-print.c
udev/: 20-usb-ptouch-permissions.rules  90-usb-ptouch-permissions.rules
